Rydder opp i mappestrukturen for sikkerhet + Støtte for TokenX