@@ -1,11 +1,9 @@
-package no.nav.foreldrepenger.util;
+package no.nav.foreldrepenger.vtp.server.auth.rest;
 
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Objects;
 
 import org.jose4j.jwk.RsaJsonWebKey;
 import org.jose4j.jws.AlgorithmIdentifiers;
@@ -14,13 +12,13 @@ import org.jose4j.jwt.JwtClaims;
 import org.jose4j.jwt.NumericDate;
 import org.jose4j.lang.JoseException;
 
+import com.google.common.base.Strings;
 
-public class AzureOidcTokenGenerator {
+
+public class OidcTokenGenerator {
 
 
-    private List<String> aud = Arrays.asList(
-            "OIDC"
-    );
+    private List<String> aud = List.of("OIDC");
     private NumericDate expiration = NumericDate.fromSeconds(NumericDate.now().getValue() + 3600*6);
     private String issuer;
     private NumericDate issuedAt = NumericDate.now();
@@ -29,7 +27,7 @@ public class AzureOidcTokenGenerator {
     private String nonce;
     private Map<String, String> additionalClaims = new HashMap<>();
 
-    public AzureOidcTokenGenerator(String brukerId, String nonce) {
+    public OidcTokenGenerator(String brukerId, String nonce) {
         additionalClaims.put("azp", "OIDC");
         additionalClaims.put("acr", "Level4");
         this.subject = brukerId;
@@ -42,38 +40,38 @@ public class AzureOidcTokenGenerator {
         this.aud.add(e);
     }
 
-    AzureOidcTokenGenerator withoutAzp() {
+    OidcTokenGenerator withoutAzp() {
         additionalClaims.remove("azp");
         return this;
     }
 
-    AzureOidcTokenGenerator withExpiration(NumericDate expiration) {
+    OidcTokenGenerator withExpiration(NumericDate expiration) {
         this.expiration = expiration;
         return this;
     }
 
-    public AzureOidcTokenGenerator withIssuer(String issuer) {
+    public OidcTokenGenerator withIssuer(String issuer) {
         this.issuer = issuer;
         return this;
     }
 
-    AzureOidcTokenGenerator withIssuedAt(NumericDate issuedAt) {
+    OidcTokenGenerator withIssuedAt(NumericDate issuedAt) {
         this.issuedAt = issuedAt;
         return this;
     }
 
-    AzureOidcTokenGenerator withKid(String kid) {
+    OidcTokenGenerator withKid(String kid) {
         this.kid = kid;
         return this;
 
     }
 
-    AzureOidcTokenGenerator withClaim(String name, String value) {
+    OidcTokenGenerator withClaim(String name, String value) {
         additionalClaims.put(name, value);
         return this;
     }
 
-    AzureOidcTokenGenerator withAud(List<String> aud) {
+    OidcTokenGenerator withAud(List<String> aud) {
         this.aud = aud;
         return this;
     }
@@ -85,7 +83,7 @@ public class AzureOidcTokenGenerator {
         claims.setGeneratedJwtId();
         claims.setIssuedAt(issuedAt);
         claims.setSubject(subject);
-        if (Objects.nonNull(nonce) && !nonce.isBlank()) {
+        if (!Strings.isNullOrEmpty(nonce)) {
             claims.setClaim("nonce", nonce);
         }
         if (aud.size() == 1) {
